add new propency

--- a/src/app.css
+++ b/src/app.css
@@ -142,3 +142,71 @@ nav {
     display: inline-flex;
   }
 }
+
+.content {
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
+}
+.section {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
+.splash {
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
+  flex-direction: column;
+}
+.logo {
+  width: 167px;
+  height: 167px;
+  object-fit: cover;
+}
+.title {
+  font-family: droid-serif, serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 68px;
+  color: white;
+}
+.content-font {
+  font-family: "Nunito", sans-serif;
+  font-size: 19px;
+  color: inherit;
+}
+.twitter {
+  font-family: "Nunito", sans-serif;
+  font-size: 19px;
+  color: white;
+}
+.footer {
+  margin-top: auto;
+  font-family: "Nunito", sans-serif;
+  font-size: 12px;
+  color: white;
+}
+.center-content {
+  margin: auto auto;
+  
+}
+.splash-img {
+  background: rgba(0, 0, 0, 0.3) url("/splash1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: darken;
+}
+.corner{
+  position:fixed;
+  right:0;
+  bottom:0;
+  opacity: 40%;
+}
+.corner:hover{
+  opacity: 80%;
+}
