--- a/src/app.css
+++ b/src/app.css
@@ -128,6 +128,72 @@ nav {
   padding: 0 10px;
   font-size: 15px;
 }
+.mobile-icon {
+  width: 25px;
+  height: 14px;
+  position: relative;
+  cursor: pointer;
+}
+
+.mobile-icon:after,
+.mobile-icon:before,
+.middle-line {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  transition: all 0.4s;
+  transform-origin: center;
+}
+
+.mobile-icon:before,
+.middle-line {
+  top: 0;
+}
+
+.mobile-icon:after,
+.middle-line {
+  bottom: 0;
+}
+
+.mobile-icon:before {
+  width: 66%;
+}
+
+.mobile-icon:after {
+  width: 33%;
+}
+
+.middle-line {
+  margin: auto;
+}
+
+.mobile-icon:hover:before,
+.mobile-icon:hover:after,
+.mobile-icon.active:before,
+.mobile-icon.active:after,
+.mobile-icon.active .middle-line {
+  width: 75%;
+}
+
+.mobile-icon.active:before,
+.mobile-icon.active:after {
+  top: 50%;
+  transform: rotate(-45deg);
+}
+
+.mobile-icon.active .middle-line {
+  transform: rotate(45deg);
+}
+.navbar-list.mobile {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  display: block;
+  height: calc(100% - 60px);
+  bottom: 0;
+  left: 0;
+}
 @media only screen and (min-width: 767px) {
   .mobile-icon {
     display: none;
@@ -150,7 +216,6 @@ nav {
   grid-template-columns: 1fr;
 }
 .section {
-
   width: 100%;
   position: relative;
 }
