--- a/src/app.css
+++ b/src/app.css
@@ -187,7 +187,7 @@ nav {
   transform: rotate(45deg);
 }
 .navbar-list.mobile {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   display: block;
   height: calc(100% - 60px);
@@ -237,7 +237,7 @@ nav {
   font-family: droid-serif, serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 68px;
+  font-size: 3.2em;
   color: white;
 }
 .content-font {
